<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">G2 AOSP Skin</string>
    <string name="dialog_dont_ask_again">Don\'t ask again</string>
    <string name="dialog_theme_dark">Dark (In progress)</string>
    <string name="dialog_theme_default">Default LG</string>
    <string name="dialog_theme_light">Light</string>
    <string name="message_kill_app">Do you want to kill the app so it can apply the new theme? (Root required)</string>
    <string name="no">No</string>
    <string name="pref_dialog">Dialogs</string>
    <string name="pref_dialog_summary">Requires reboot.</string>
    <string name="pref_kill_app">Kill app</string>
    <string name="pref_kill_app_summary">Requires root.</string>
    <string name="pref_kill_app_show_popup">Show kill app popup</string>
    <string name="pref_kill_app_show_popup_summary">Don\'t ask to kill app.</string>
    <string name="pref_lg_messenger">LG Messenger</string>
    <string name="pref_power_menu">Power/Reboot Menu</string>
    <string name="pref_power_menu_summary">Requires reboot.</string>
    <string name="pref_replace_menu_key">Allow Menu key to be removed.</string>
    <string name="pref_replace_menu_key_summary">Allows the Menu key to be removed with the front keys combination option in LG\'s settings. Recent Apps becomes required.</string>
    <string name="pref_settings">Settings</string>
    <string name="title_kill_app">Kill App</string>
    <string name="yes">Yes</string>
</resources>