<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Enable AOSP like theme for...">

        <ListPreference
            android:defaultValue="theme_default"
            android:entries="@array/dialogTheme"
            android:entryValues="@array/dialogThemeValues"
            android:key="pref_aosp_theme_dialog"
            android:summary="@string/pref_dialog_summary"
            android:title="@string/pref_dialog"/>

        <ListPreference
            android:defaultValue="theme_default"
            android:entries="@array/dialogTheme"
            android:entryValues="@array/dialogThemeValues"
            android:key="pref_aosp_theme_power_menu"
            android:summary="@string/pref_power_menu_summary"
            android:title="@string/pref_power_menu"/>

        <CheckBoxPreference
            android:key="pref_aosp_theme_settings"
            android:title="@string/pref_settings"/>

    </PreferenceCategory>

</PreferenceScreen>